--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,4 @@ jobs:
 
     - name: Check style with Pylint
       run: |
-        python3 -m pylint --reports=y inflammation
+        python3 -m pylint inflammation
